Added a POI to the world.
A POI node now appears in the world.

--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -49,6 +49,16 @@ sim-time-limit = 300s
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 
 ##########################################################
+#                      POI Settings                      #
+# Author: Quentin Goss                                   #
+# Last Modified: 6/13/18 @ 5:45pm                        #
+##########################################################
+*.poi[0].mobility.x = 1950 # to the Right
+*.poi[0].mobility.y = 1500 # to the Bottom
+*.poi[0].mobility.z = 3
+
+
+##########################################################
 #                       RSU SETTINGS                     #
 #                                                        #
 #                                                        #
