Added applType config + Screenshots
First of all, I removed the thread testing folder since we do not need
the uneccesary clutter.

Secondly, I added an application type to the omnetpp.ini file so there
is no longer a prompt to specify the applType template.

Finally, I've taken screenshots of the description tab for each of the
.ned files so that I can add a graphical representation of each NED to
the readme.md.

--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -51,12 +51,13 @@ sim-time-limit = 300s
 ##########################################################
 #                      POI Settings                      #
 # Author: Quentin Goss                                   #
-# Last Modified: 6/13/18 @ 5:45pm                        #
+# Last Modified: 6/18/18 @ 1:30pm                        #
 ##########################################################
 *.poi[0].mobility.x = 1950 # to the Right
 *.poi[0].mobility.y = 1500 # to the Bottom
 *.poi[0].mobility.z = 3
 
+*.poi[*].applType = "MyVeinsApp" # <--- uses the TraCI template
 
 ##########################################################
 #                       RSU SETTINGS                     #
