Added an ApplType module
+ Added an appltype module ChangeRouteTest.

This module is an attempt to understand the function TraCIDemo11p by
creating my own module one piece at a time. Currently it only calls
initilize.

+ Added a configuration option ChangeRouteTest to the omnetpp.ini file
for the new module.

+ Added a screenshot of the coordinates and edge mentioned in
TraCIDemo11p::initialize(int stage) fucntion in TraCIDemo11p.cc

--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -117,8 +117,11 @@ sim-time-limit = 300s
 *.node[*].veinsmobility.y = 0
 *.node[*].veinsmobility.z = 1.895
 *.node[*0].veinsmobility.accidentCount = 0
-*.node[*0].veinsmobility.accidentStart = 75s
+*.node[*0].veinsmobility.accidentStart = 10s
 *.node[*0].veinsmobility.accidentDuration = 50s
+
+[Config ChangeRouteTest]
+*.node[*].applType = "ChangeRouteTest"
 
 [Config WithoutChannelSwitching]
 
