--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /sumo_master/projects/3choices/data/errors.txt
 /sumo_master/projects/3choices/__pycache__/runner.cpython-35.pyc
 /sumo_master/projects/3choices/data/3choices.rou.xml
+/sumo_master/projects/3choices/ex3/__pycache__
+/sumo_master/projects/3choices/ex4/__pycache__
+
+
