Moved grid readme

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@
 /sumo_master/projects/3choices/data/3choices.rou.xml
 /sumo_master/projects/3choices/ex3/__pycache__
 /sumo_master/projects/3choices/ex4/__pycache__
+/sumo_master/projects/grid2/poi1/__pycache__
 
 
